Optimize GitHub Actions workflow triggers
- Run tests only on Pull Requests (not every push)
- Add path filtering for relevant cookie consent files only
- Keep manual workflow_dispatch for debugging
- Saves CI minutes and reduces unnecessary test runs

Triggers now:
✅ Pull Requests to main (when cookie files change)
✅ Manual dispatch for debugging
❌ No longer on every push to main

Monitored files:
- assets/js/cookie-consent.js
- _layouts/default.html
- datenschutz.md
- impressum.md
- assets/css/style.css

--- a/.github/workflows/test-cookie-consent.yml
+++ b/.github/workflows/test-cookie-consent.yml
@@ -1,10 +1,16 @@
 name: Cookie Consent Tests
 
 on:
-  push:
-    branches: [ main, feature/* ]
+  # Nur bei Pull Requests testen - nicht bei jedem Push
   pull_request:
     branches: [ main ]
+    paths: 
+      - 'assets/js/cookie-consent.js'
+      - '_layouts/default.html'
+      - 'datenschutz.md'
+      - 'impressum.md'
+      - 'assets/css/style.css'
+  # Manueller Trigger für Debugging
   workflow_dispatch:
 
 jobs:
