--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Git LFS configuration for large files
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+demoV17.mp4 filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.mov filter=lfs diff=lfs merge=lfs -text
 *.avi filter=lfs diff=lfs merge=lfs -text
