--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ ai4mbse_demo.mp4 filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.mov filter=lfs diff=lfs merge=lfs -text
 *.avi filter=lfs diff=lfs merge=lfs -text
+ai4mbse/ai4mbse_demo.mp4 filter=lfs diff=lfs merge=lfs -text
